# solana-assert

./: Anchor.toml  Cargo.toml  README.md
app/assert_client/: Cargo.toml
app/assert_client/src/: lib.rs  main.rs
programs/assert_program/: Cargo.toml
programs/assert_program/src/: lib.rs
