[package]
name = "assert_client"
version = "0.1.0"
edition = "2021"
authors = ["Serge FARNY <serge.farny@gmail.com>"]

[dependencies]
anchor-client = "0.29.0"
anchor-spl = "0.29.0"
mpl-token-metadata = "4.0.0"
solana-sdk = "1.16.14"
borsh = { version = "0.10.3", features = ["const-generics"] }
clap = { version = "4.4.18" , features = ["derive"]}
anyhow = "1.0.32"
spl-associated-token-account = "2.3.0"
assert_program = { path = "../../programs/assert_program", features = ["no-entrypoint"] }
